# HD2SDK-workspace

./: .gitignore  AGENTS.md  __init__.py
docs/: DataStructures.md
mod_armor_migrator/: README.md  SUPEREARTH_STALKER_ARMOR_MAP.md  VALIDATION.md  __init__.py  __main__.py  _builtin_empty_mesh.py  archive.py  archivehashes.json  compare_variants.py  constants.py  diff_patches.py  diff_unit_refs.py  dump_region.py  extract_remap.py  find_diff_offsets.py  find_empty_unit.py  hashing.py  inspect_padding.py  inspect_patch.py  inspect_template.py  migrator.py  padding.py  refs.py  selftest.py  unit_body_shape.py  unit_geometry.py  unit_names.py  unit_semantics.py  verify_full_remap.py
mod_armor_migrator_rs/: Cargo.toml  README.md  build.rs
mod_armor_migrator_rs/src/: constants.rs  error.rs  hashing.rs  index.rs  lib.rs  main.rs  refs.rs
mod_armor_migrator_rs/src/archive/: dsar.rs  mod.rs  reassembly.rs
mod_armor_migrator_rs/src/cli/: args.rs  interactive.rs  logging.rs  mod.rs  progress.rs
mod_armor_migrator_rs/src/migrator/: mod.rs  mode_a.rs  mode_b.rs  report.rs
mod_armor_migrator_rs/src/padding/: empty_mesh.rs  mod.rs
mod_armor_migrator_rs/src/unit/: body_shape.rs  geometry.rs  mod.rs  names.rs  semantics.rs
utils/: vertex_group_mapper.py
